change font size

--- a/about.html
+++ b/about.html
@@ -84,65 +84,50 @@
 		<div id="colorlib-about">
 			<div class="about-flex js-fullheight">
 				<div class="col-half js-full-height about-img" style="background-image: url(images/about.jpg);"></div>
-				<div class="col-half">
-					<div class="owl-carousel3">
-						<div class="item">
-							<div class="display-t js-fullheight">
-								<div class="display-tc js-fullheight">
-									<div class="about-desc">
-										<div class="row row-pb-md">
-											<div class="col-md-12">
-												<span class="title">About Me</span>
-												<h2 class="about-head">Annie Pham</h2>
-												<p>Based in Orange County & Los Angeles</p>
-											</div>
-										</div>								
-										<div class="row">
-											<div class="col-md-4">
-												<span class="title">Education</span>
-												<p>University of California, Riverside - 2018
-													<br>Candidate for BA in Linguistics
-													<br>Minor in Computer Science
-												</p>
-											</div>
-											<div class="col-md-4">
-												<span class="title">What I Like</span>
-												<p>Travel
+				<div class="col-half">				
+					<div class="item">
+						<div class="display-t js-fullheight">
+							<div class="display-tc js-fullheight">
+								<div class="about-desc">
+									<div class="row row-pb-md">
+										<div class="col-md-12">
+											<span class="title">About Me</span>
+											<h2 class="about-head">Annie Pham</h2>
+											<p>Based in Orange County & Los Angeles</p>
+										</div>
+									</div>								
+									<div class="row">
+										<div class="col-md-4">
+											<span class="title">Education</span>
+											<font size="2">
+												University of California, Riverside - 2018
+												<br>Candidate for BA in Linguistics
+												<br>Minor in Computer Science
+											</font>
+										</div>
+										<div class="col-md-4">
+											<span class="title">What I Like</span>
+											<font size="2">
+												Travel
 												<br>Photography
 												<br>Rock Climbing
-												<br>Creative Work</p>
-											</div>
-											<div class="col-md-4">
-												<span class="title">Contact</span>
-												<p class="colorlib-social-icons">
-													<a href="mailto:phamanniev@gmail.com"><i class="icon-mail5"></i></a>
-													<a href="https://www.linkedin.com/in/apham024/"><i class="icon-linkedin3"></i></a>
-													<a href="https://github.com/apham024"><i class="icon-github2"></i></a>
-												</p>
-											</div>
-											<div class="col-md-4">
-												<span class="title">Resume</span>
-												<p class="colorlib-social-icons">
-													<a href="Annie_Pham.pdf"><i class="icon-newspaper"></i></a>
-												</p>
-											</div>
+												<br>Creative Work
+											</font>
 										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="item">
-							<div class="display-t js-fullheight">
-								<div class="display-tc js-fullheight">
-									<div class="about-desc">
-										<div class="row row-pb-md">
-											<div class="col-md-12">
-												<span class="title">Career</span>
-												<h2 class="about-head">I used to think I was the father of structural linguistics, but now I'm not Saussure...</h2>
-												<p>It may seem like a bad joke, but this is actually my portfolio. My name is Annie Pham and I am an Orange County based aspiring Computational Linguist with a background in data analytics, phonetics, phonology, morphology, and natural languages. I am particularly excited by the idea of being able to build a bridge between language and technology because technology is shaping the future of language. Specifically, I want to harness the technology and lexical data we have today to identify new and emerging patterns using our online databases that exist in the technological world. I am your one-stop shop for natural language processing, transcription and translation, text mining, and design. As an aspiring Computational Linguist, I want to focus on computer-assisted language learning and document and data processing. I want to work to effect change.</p>
-											</div>
-										</div>								
+										<div class="col-md-4">
+											<span class="title">Contact</span>
+											<p class="colorlib-social-icons">
+												<a href="mailto:phamanniev@gmail.com"><i class="icon-mail5"></i></a>
+												<a href="https://www.linkedin.com/in/apham024/"><i class="icon-linkedin3"></i></a>
+												<a href="https://github.com/apham024"><i class="icon-github2"></i></a>
+											</p>
+										</div>
+										<div class="col-md-4">
+											<span class="title">Resume</span>
+											<p class="colorlib-social-icons">
+												<a href="Annie_Pham.pdf"><i class="icon-newspaper"></i></a>
+											</p>
+										</div>
 									</div>
 								</div>
 							</div>
