--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -66,7 +66,7 @@
 			</div>
 		</div>
 	</nav>
-	
+
 	<div id="colorlib-page">
 		<header>
 			<div class="container">
@@ -80,11 +80,11 @@
 				</div>
 			</div>
 		</header>
-		
+
 		<div id="colorlib-about">
 			<div class="about-flex js-fullheight">
 				<div class="col-half js-full-height about-img" style="background-image: url(images/about.jpg);"></div>
-				<div class="col-half">				
+				<div class="col-half">
 					<div class="item">
 						<div class="display-t js-fullheight">
 							<div class="display-tc js-fullheight">
@@ -95,7 +95,7 @@
 											<h2 class="about-head">Annie Pham</h2>
 											<p>Based in Orange County & Los Angeles</p>
 										</div>
-									</div>								
+									</div>
 									<div class="row">
 										<div class="col-md-4">
 											<span class="title">Education</span>
@@ -108,7 +108,7 @@
 										<div class="col-md-4">
 											<span class="title">What I Like</span>
 											<font size="2">
-												Travel
+												Travelling
 												<br>Photography
 												<br>Rock Climbing
 												<br>Creative Work
@@ -147,7 +147,7 @@
 												<p><strong>Far far away, behind the word mountains, far from the countries</strong></p>
 												<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli.</p>
 											</div>
-										</div>								
+										</div>
 										<div class="row">
 											<div class="col-md-4">
 												<h3>Office</h3>
@@ -178,7 +178,7 @@
 												<p><strong>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</strong></p>
 												<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
 											</div>
-										</div>								
+										</div>
 									</div>
 								</div>
 
@@ -196,7 +196,7 @@
 													<li><i class="icon-check"></i> Pityful a rethoric question ran over her cheek, then she continued her way.</li>
 												</ul>
 											</div>
-										</div>								
+										</div>
 									</div>
 								</div>
 							</div>
@@ -205,7 +205,7 @@
 				</div> -->
 			</div>
 		</div>
-		
+
 		<!-- <div id="colorlib-subscribe">
 			<div class="overlay"></div>
 			<div class="container">
@@ -266,7 +266,7 @@
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
-								<span class="block">&copy; 2018. All Rights Reserved. Designed by <a href="https://colorlib.com/" target="_blank">Colorlib</a><br></span> 
+								<span class="block">&copy; 2018. All Rights Reserved. Designed by <a href="https://colorlib.com/" target="_blank">Colorlib</a><br></span>
 								<span class="block">Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></span>
 							</p>
 						</div>
@@ -274,7 +274,7 @@
 				</div>
 			</div>
 		</footer> -->
-	
+
 	</div>
 
 	<!-- jQuery -->
@@ -296,4 +296,3 @@
 
 	</body>
 </html>
-
