--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Bato Template</title>
+	<title>P R O J E C T S | anniepham</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -161,23 +161,6 @@
 				</div>
 			</div>
 		</div>
-		
-		<footer>
-			<div id="footer">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-4 col-pb-sm text-center">
-							<p class="colorlib-social-icons">
-                                <a href="mailto:phamanniev@gmail.com"><i class="icon-mail5"></i></a>
-                                <a href="https://www.linkedin.com/in/apham024/"><i class="icon-linkedin3"></i></a>
-                                <a href="https://github.com/apham024"><i class="icon-github2"></i></a>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</footer>
-	
 	</div>
 
 	<!-- jQuery -->
