--- a/about.html
+++ b/about.html
@@ -60,6 +60,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li class="active"><a href="about.html">About</a></li>
+							<li><a href="work.html">Projects</a></li>
 						</ul>
 					</div>
 				</div>
