--- a/play.html
+++ b/play.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>P R O J E C T S | anniepham</title>
+	<title>P L A Y | anniepham</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -57,11 +57,19 @@
 			<div class="colorlib-table-cell js-fullheight">
 				<div class="row">
 					<div class="col-md-12">
+						<div class="form-group">
+							<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
+							<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li class="active"><a href="work.html">Projects</a></li>
-                            <li><a href="play.html">Play</a></li>
+							<li><a href="about.html">About</a></li>
+							<li><a href="work.html">Projects</a></li>
+							<li class="active"><a href="play.html">Play</a></li>
 						</ul>
 					</div>
 				</div>
@@ -83,20 +91,7 @@
 					</div>
 				</div>
 			</div>
-        </div>
-        
-        <div class="row">
-            <div class="col-md-12">
-                <h2 class="head-title">Gallery</h2>
-                <a href="images/polarity.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/polarity.jpg);">
-                    <span><i class="icon-search3"></i></span>
-                </a>
-                <a href="images/thumbprint.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/thumbprint.jpg);">
-                    <span><i class="icon-search3"></i></span>
-                </a>
-            </div>
-        </div>
-
+		</div>
 	</nav>
 	
 	<div id="colorlib-page">
@@ -113,69 +108,60 @@
 			</div>
 		</header>
 		
-		<div id="colorlib-work">
+		<div id="colorlib-blog">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Projects</h2>
+					<h2 class="bold"></h2>
 				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<div class="work-entry-flex animate-box js-fullheight">
-							<div class="col-three-forth js-fullheight">
-								<div class="row no-gutters">
-									<div class="col-md-12 col-md-push-10 no-gutters">
-										<div class="work-img js-fullheight" style="background-image: url(images/polarity.jpg);">
-										</div>
-									</div>
+				<div class="row row-pb-md">
+					<div class="col-md-4">
+						<div class="article animate-box">
+							<a href="play.html" class="blog-img">
+								<img class="img-responsive" src="images/antelope.jpg" alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">Arizona</h2>
 								</div>
-							</div>
-							<div class="col-one-forth js-fullheight">
-								<div class="row no-gutters">
-									<div class="col-md-12 col-md-pull-12 no-gutters">
-										<div class="display-t js-fullheight">
-											<div class="display-tc js-fullheight">
-												<div class="text-inner text-inner-right">
-                                                    <span class="title">Polarity</span>
-													<h2>Text Processing Application</h2>
-													<p>A program that scans real-world news transcripts to analyze sentimental value of words, based on the Presidential Election of 2016, Donald Trump versus Hillary Clinton. We were able to find the frequency of each candidate on each network, using the public's reactions toward the election.</p>
-													<p><a href="Linguistic_Analyses_data.pdf" class="btn-view">View</a></p>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
+							</a>
+							<div class="desc">
+								<span class="meta">December 2018</span>
+								<h2><a href="play.html">Antelope Canyon</a></h2>
+								<p>A sneak peak of the beautiful Antelope Canyon in the American Southwest - it has become the most-photographed and most-visited slot canyon in all of the American Southwest because of its beauty.</p>
 							</div>
 						</div>
 					</div>
-
-					<div class="col-md-12">
-						<div class="work-entry-flex animate-box js-fullheight">
-							<div class="col-three-forth js-fullheight">
-								<div class="row no-gutters">
-									<div class="col-md-12 no-gutters">
-										<div class="work-img js-fullheight" style="background-image: url(images/thumbprint.jpg);">
-										</div>
-									</div>
+					<div class="col-md-4">
+						<div class="article animate-box">
+							<a href="play.html" class="blog-img">
+								<img class="img-responsive" src="images/brooklyn.jpg" alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">New York</h2>
 								</div>
-							</div>
-							<div class="col-one-forth js-fullheight">
-								<div class="row no-gutters">
-									<div class="col-md-12 no-gutters">
-										<div class="display-t js-fullheight">
-											<div class="display-tc js-fullheight">
-												<div class="text-inner text-inner-left">
-                                                    <span class="title">Thumbprint</span>
-													<h2>Neural Networks + Deep Learning</h2>
-													<p>A machine learning program that recognizes different handwriting patterns of digits (e.g. 1, 2, 3) and maximizes its understanding of the patterns. By the end of the program, it should be able to identify a ‘1’ that possibly looks like a ‘7’ (as an example but test cases work for digits 0-9), regardless of the handwriting.</p>
-													<p><a href="Neural Networks Report.pdf" class="btn-view">View</a></p>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
+							</a>
+							<div class="desc">
+								<span class="meta">December 2017</span>
+								<h2><a href="play.html">Brooklyn Bridge</a></h2>
+								<p>The Brooklyn Bridge is a historic landmark in New York City and is one of the oldest roadway bridges in the US.</p>
 							</div>
 						</div>
-                    </div>
+					</div>
+					<div class="col-md-4">
+						<div class="article animate-box">
+							<a href="play.html" class="blog-img">
+								<img class="img-responsive" src="images/joshuatree.jpg" alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">California</h2>
+								</div>
+							</a>
+							<div class="desc">
+								<span class="meta">November 2017</span>
+								<h2><a href="play.html">Joshua Tree Nat'l Park</a></h2>
+								<p>Taken after a full day of climbing slabs in Joshua Tree National Park.</p>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
