--- a/play.html
+++ b/play.html
@@ -103,8 +103,59 @@
 		<div id="colorlib-blog">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold"></h2>
+					<h2 class="bold">Gallery</h2>
 				</div>
+				<div class="row row-pb-md">
+					<div class="col-md-4">
+						<div class="article animate-box">
+							<a href="play.html" class="blog-img">
+								<img class="img-responsive" src="images/shrine.jpg" alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">Tokyo</h2>
+								</div>
+							</a>
+							<div class="desc">
+								<span class="meta">June 2018</span>
+								<h2><a href="play.html">Meiji Shrine</a></h2>
+								<p></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="article animate-box">
+							<a href="play.html" class="blog-img">
+								<img class="img-responsive" src="images/arcade.jpg" alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">Tokyo</h2>
+								</div>
+							</a>
+							<div class="desc">
+								<span class="meta">June 2018</span>
+								<h2><a href="play.html">Arcade in Tokyo</a></h2>
+								<p></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="article animate-box">
+							<a href="play.html" class="blog-img">
+								<img class="img-responsive" src="images/bigbuddha.jpg" alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">Kamakura</h2>
+								</div>
+							</a>
+							<div class="desc">
+								<span class="meta">June 2018</span>
+								<h2><a href="play.html">Kōtoku-in</a></h2>
+								<p></p>
+							</div>
+						</div>
+					</div>
+				</div>
+
 				<div class="row row-pb-md">
 					<div class="col-md-4">
 						<div class="article animate-box">
