fix picture in play.html

--- a/play.html
+++ b/play.html
@@ -133,7 +133,7 @@
 							</a>
 							<div class="desc">
 								<span class="meta">June 2018</span>
-								<h2><a href="play.html">Arcade in Tokyo</a></h2>
+								<h2><a href="play.html">Taito Station</a></h2>
 								<p></p>
 							</div>
 						</div>
