--- a/play.html
+++ b/play.html
@@ -117,7 +117,7 @@
 							</a>
 							<div class="desc">
 								<span class="meta">June 2018</span>
-								<h2><a href="play.html">Meiji Shrine</a></h2>
+								<h2><a href="play.html">Meiji Jingu</a></h2>
 								<p></p>
 							</div>
 						</div>
