fix picture in play.html

--- a/play.html
+++ b/play.html
@@ -109,7 +109,7 @@
 					<div class="col-md-4">
 						<div class="article animate-box">
 							<a href="play.html" class="blog-img">
-								<img class="img-responsive" src="images/shrine.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="images/meiji.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Tokyo</h2>
