fix picture in play.html

--- a/play.html
+++ b/play.html
@@ -77,7 +77,7 @@
 						<a href="images/antelope.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/antelope.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
-						<a href="images/meiji.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/meiji.jpg);">
+						<a href="images/joshuatree.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/joshuatree.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
 					</div>
