fix picture in play.html

--- a/play.html
+++ b/play.html
@@ -150,7 +150,7 @@
 							<div class="desc">
 								<span class="meta">June 2018</span>
 								<h2><a href="play.html">Kōtoku-in</a></h2>
-								<p></p>
+								<p>The Great Buddha of Kamakura is a monumental outdoor bronze statue of Amitabha Buddha, one of the Five Wisdom Buddhas.</p>
 							</div>
 						</div>
 					</div>
@@ -169,7 +169,7 @@
 							<div class="desc">
 								<span class="meta">December 2018</span>
 								<h2><a href="play.html">Antelope Canyon</a></h2>
-								<p>A sneak peak of the beautiful Antelope Canyon in the American Southwest - it has become the most-photographed and most-visited slot canyon in all of the American Southwest because of its beauty.</p>
+								<p>A sneak peak of the beautiful Antelope Canyon in the American Southwest - it has become the most-photographed and most-visited slot canyon in all of the American Southwest.</p>
 							</div>
 						</div>
 					</div>
