--- a/play.html
+++ b/play.html
@@ -118,7 +118,7 @@
 							<div class="desc">
 								<span class="meta">June 2018</span>
 								<h2><a href="play.html">Meiji Jingu</a></h2>
-								<p></p>
+								<p>The barrels of wine are lined up on the way to the shrine halls. Rice and rice wine are two key offerings to “kami”. The casks of wine represent the modern era Emperor Meiji helped usher into Japan.</p>
 							</div>
 						</div>
 					</div>
@@ -134,7 +134,7 @@
 							<div class="desc">
 								<span class="meta">June 2018</span>
 								<h2><a href="play.html">Taito Station</a></h2>
-								<p></p>
+								<p>Taito Station is one of the leading names in Japanese arcade gaming. It features the latest selection of arcade games, including virtual reality games, and photo sticker booths.</p>
 							</div>
 						</div>
 					</div>
