add to about.html

--- a/about.html
+++ b/about.html
@@ -112,25 +112,25 @@
 										<div class="col-md-12">
 											<span class="title">About Me</span>
 											<h2 class="about-head">Annie Pham</h2>
-											<p>Based in Orange County & Los Angeles</p>
+											<p>Orange County & Los Angeles</p>
 										</div>
 									</div>
 									<div class="row">
 										<div class="col-md-4">
 											<span class="title">Education</span>
-											<font size="2">
+											<font size="1">
 												University of California, Riverside - 2018
 												<br>Candidate for BA in Linguistics
 												<br>Minor in Computer Science
 											</font>
 										</div>
 										<div class="col-md-4">
-											<span class="title">What I Like</span>
-											<font size="2">
-												Travelling
-												<br>Photography
+											<span class="title">Interests</span>
+											<font size="1">
+												Photography
 												<br>Rock Climbing
-												<br>Creative Work
+												<br>Playing Tennis
+												<br>Traveling
 											</font>
 										</div>
 										<div class="col-md-4">
