edit sidebar link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="work.html">Projects</a></li>
-							<li><a href="play.html">Play</a></li>
+							<li><a href="play.html">Playground</a></li>
 						</ul>
 					</div>
 					<div class="row">
