--- a/play.html
+++ b/play.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>P L A Y | anniepham</title>
+	<title>P L A Y G R O U N D | anniepham</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -61,7 +61,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="work.html">Projects</a></li>
-							<li class="active"><a href="play.html">Play</a></li>
+							<li class="active"><a href="play.html">Playground</a></li>
 						</ul>
 					</div>
 				</div>
