--- a/play.html
+++ b/play.html
@@ -200,8 +200,8 @@
 							</a>
 							<div class="desc">
 								<span class="meta">November 2017</span>
-								<h2><a href="play.html">Joshua Tree Nat'l Park</a></h2>
-								<p>Taken after a full day of climbing slabs in Joshua Tree National Park.</p>
+								<h2><a href="play.html">Joshua Tree National Park</a></h2>
+								<p>The national park lies where the high Mojave Desert meets the low Colorado Desert.</p>
 							</div>
 						</div>
 					</div>
