--- a/about.html
+++ b/about.html
@@ -119,18 +119,18 @@
 										<div class="col-md-4">
 											<span class="title">Education</span>
 											<font size="2">
-												University of California, Riverside - 2018
-												<br>Candidate for BA in Linguistics
-												<br>Minor in Computer Science
+												> University of California, Riverside - 2018
+												<br> > Candidate for BA in Linguistics
+												<br> > Minor in Computer Science
 											</font>
 										</div>
 										<div class="col-md-4">
 											<span class="title">Interests</span>
 											<font size="2">
-												Photography
-												<br>Rock Climbing
-												<br>Playing Tennis
-												<br>Traveling
+												> Photography
+												<br> > Rock Climbing
+												<br> > Playing Tennis
+												<br> > Traveling
 											</font>
 										</div>
 										<div class="col-md-4">
