add button to learn more on index.html

--- a/index.html
+++ b/index.html
@@ -110,9 +110,12 @@
 							<div class="display-tc js-fullheight">
 								<div class="text-inner">
 									<div class="desc">
-										<span class="tag">Welcome</span>
-										<h2>My name is Annie Pham</h2>
+										<span class="tag">Hello</span>
+										<div align="left">
+											<h2>My name is Annie Pham</h2>
+										</div>
 										<p>& I am a <mark>DevOps Engineer</mark>.</p>
+										<p><a href="about.html" class="btn-view">Learn More<i class="icon-arrow-right3"></i></a></p>
 									</div>
 								</div>
 							</div>
