--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@
 								<div class="text-inner">
 									<div class="desc">
 										<span class="tag">Hello</span>
+										<h2>My name is</h2>
 										<div align="left">
-											<h2>My name is Annie Pham</h2>
+											<h2>Annie Pham</h2>
 										</div>
 										<p>& I am a <mark>DevOps Engineer</mark>.</p>
 										<p><a href="about.html" class="btn-view">Learn More<i class="icon-arrow-right3"></i></a></p>
