remove graduation date

--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
 										<div class="col-md-4">
 											<span class="title">Education</span>
 											<font size="2">
-												> University of California, Riverside - 2018
+												> University of California, Riverside
 												<br> > Candidate for BA in Linguistics
 												<br> > Minor in Computer Science
 											</font>
