update resume and about.html

--- a/about.html
+++ b/about.html
@@ -127,9 +127,10 @@
 										<div class="col-md-4">
 											<span class="title">Interests</span>
 											<font size="2">
-												> Photography
-												<br> > Rock Climbing
+												> Boxing
+												<br> > Photography
 												<br> > Playing Tennis
+												<br> > Rock Climbing
 												<br> > Traveling
 											</font>
 										</div>
